add android studio 4.2 beta3 and 2020.3.1 canary4 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,94 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2020.3.1 Canary 4-->
+                            <tr>
+                                <td rowspan="6">2020.3.1 Canary 4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.4/android-studio-ide-2020.3.1.4-windows.exe">android-studio-ide-2020.3.1.4-windows.exe</a>
+                                </td>
+                                <td>1000224440 bytes</td>
+                                <td>b55785c796e22486dd3cec0d4360d8788de60c52514883af7ca4d398270beec7</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/008eGmZEly1gmkpin7pvqj30nm0b374s.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.4/android-studio-ide-2020.3.1.4-windows.zip">android-studio-ide-2020.3.1.4-windows.zip</a>
+                                </td>
+                                <td>1007645004 bytes</td>
+                                <td>139ab6c091edc1b7a0a3e87ec9b244e17e6dd1c6d59387d17f9b976eb03e75db</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.4/android-studio-ide-2020.3.1.4-mac.zip">android-studio-ide-2020.3.1.4-mac.zip</a>
+                                </td>
+                                <td>1009069934 bytes</td>
+                                <td>8d92a89733d6136bc630a9a2ea43da775cd49b20c7cb1f647a12d800cc271ed3</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.4/android-studio-ide-2020.3.1.4-linux.tar.gz">android-studio-ide-2020.3.1.4-linux.tar.gz</a>
+                                </td>
+                                <td>1025954264 bytes</td>
+                                <td>64eae480f415cad604e37d50154e4f8cedba0d13ee6a5b1e3e63019c1f81b915</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.4/android-studio-ide-2020.3.1.4-cros.deb">android-studio-ide-2020.3.1.4-cros.deb</a>
+                                </td>
+                                <td>876704204 bytes</td>
+                                <td>fbbc1c1977dd93c41187a1fec52a5e3dd367ac2e9498fee89be4a5d4527c1b5f</td>
+                            </tr>
+                            <!-- 4.2 Beta3 -->
+                            <tr>
+                                <td rowspan="6">4.2 Beta3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.19/android-studio-ide-202.7033425-windows.exe">android-studio-ide-202.7033425-windows.exe</a>
+                                </td>
+                                <td>981733672 bytes</td>
+                                <td>c7560e5c3ad620ee19e6020e5a0592f45551dc28e46d4ea8936f012c25cbc0b6</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/008eGmZEly1gmkpfvwh3xj30no0b4gm5.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.19/android-studio-ide-202.7033425-windows.zip">android-studio-ide-202.7033425-windows.zip</a>
+                                </td>
+                                <td>989126890 bytes</td>
+                                <td>484c4ea04d16c6d566288ea3451cd20c817ac22451136ec937921511b7de0bdb</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.19/android-studio-ide-202.7033425-mac.zip">android-studio-ide-202.7033425-mac.zip</a>
+                                </td>
+                                <td>988840424 bytes</td>
+                                <td>64f11d0e1ebdc7e9ee57199f17633befac3fe8e85cb3ff9677d7fded72e23ddf</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.19/android-studio-ide-202.7033425-linux.tar.gz">android-studio-ide-202.7033425-linux.tar.gz</a>
+                                </td>
+                                <td>1005748421 bytes</td>
+                                <td>84c7bb88cf26d4f6946f39d165fade4495ee8dc3204df38d77c09b60614af90c</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.19/android-studio-ide-202.7033425-cros.deb">android-studio-ide-202.7033425-cros.deb</a>
+                                </td>
+                                <td>849561148 bytes</td>
+                                <td>7125e548dfc354c71a08b810a8ac26405221e921f1f0f0fd41f6f3989a115913</td>
+                            </tr>
                             <!-- 2020.3.1 Canary 3-->
                             <tr>
                                 <td rowspan="6">2020.3.1 Canary 3</td>
