add android studio 4.1.2 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,59 @@
                             </tr>
                         </thead>
                         <tbody>
+
+                            <!-- 4.1.2 正式版 -->
+                            <tr>
+                                <td rowspan="7">4.1.2 正式版</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.2.0/android-studio-ide-201.7042882-windows.exe">android-studio-ide-201.7042882-windows.exe</a>
+                                </td>
+                                <td>939669936 bytes</td>
+                                <td>22cdcfeffabe384e788b679c5c03238684fa3f1f4c73e2a3744f2fe5aab7f97f</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008eGmZEly1gmv8ol86cmj31a20o8mzl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.2.0/android-studio-ide-201.7042882-windows.zip">android-studio-ide-201.7042882-windows.zip</a>
+                                </td>
+                                <td>943807756 bytes</td>
+                                <td>7fb6e49e76ead2ff389c37f83a6c90526aa1f716aece028c8b8c34edf8ce9804</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.2.0/android-studio-ide-201.7042882-mac.dmg">android-studio-ide-201.7042882-mac.dmg</a>
+                                </td>
+                                <td>919737896 bytes</td>
+                                <td>541db2ab0fda0b1197509b39fac905b7e4879a1d0bad749ad1ccc0727e02ea6b</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.2.0/android-studio-ide-201.7042882-mac.zip">android-studio-ide-201.7042882-mac.zip</a>
+                                </td>
+                                <td>918895536 bytes</td>
+                                <td>fe32829281b8c2d615657015dabb169bb8592dd6e9f22546d0070d84391b59f8</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.1.2.0/android-studio-ide-201.7042882-linux.tar.gz">android-studio-ide-201.7042882-linux.tar.gz</a>
+                                </td>
+                                <td>925365363 bytes</td>
+                                <td>89f7c3a03ed928edeb7bbb1971284bcb72891a77b4f363557a7ad4ed37652bb9</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.1.2.0/android-studio-ide-201.7042882-cros.deb">android-studio-ide-201.7042882-cros.deb</a>
+                                </td>
+                                <td>778712556 bytes</td>
+                                <td>13a7bda7a58cd56e1544f16705a17cc633951d692a16c0b9a9767b07d7cfea54</td>
+                            </tr>
                             <!-- 2020.3.1 Canary 4-->
                             <tr>
                                 <td rowspan="6">2020.3.1 Canary 4</td>
