add android studio 4.2.1 links

--- a/index.html
+++ b/index.html
@@ -317,12 +317,64 @@
                         <tbody>
                             <!-- 4.1.3 正式版 -->
                             <tr>
+                                <td rowspan="7">4.2.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.24/android-studio-ide-202.7351085-windows.exe">android-studio-ide-202.7351085-windows.exe</a>
+                                </td>
+                                <td>978607576 bytes</td>
+                                <td>1db6aef39055d4cd69de26026aa0d3f17d10dd2b66051004580eb5175039934f</td>
+                                <td rowspan="7"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.24/android-studio-ide-202.7351085-windows.zip">android-studio-ide-202.7351085-windows.zip</a>
+                                </td>
+                                <td>981462789 bytes</td>
+                                <td>c5bf48735fcd8626b8d2263074d9728797a7fa7ea1de6e689fa2ed3331b97fbf</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.24/android-studio-ide-202.7351085-mac.dmg">android-studio-ide-202.7351085-mac.dmg</a>
+                                </td>
+                                <td>981767724 bytes</td>
+                                <td>d993eab5751c2bac5caa7f3b2aa0bb6e8c20477ce67f9ed1b8d87ad6172c92da</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.24/android-studio-ide-202.7351085-mac.zip">android-studio-ide-202.7351085-mac.zip</a>
+                                </td>
+                                <td>982783833 bytes</td>
+                                <td>46366b5963287a2752b800a0809856f6511a3a269715f3cadc9e575ae8d410f3</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.24/android-studio-ide-202.7351085-linux.tar.gz">android-studio-ide-202.7351085-linux.tar.gz</a>
+                                </td>
+                                <td>998057642 bytes</td>
+                                <td>66e06233349d07ac0fd53a23accc1bba5146488d0221bdf793557d0441349e1c</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.24/android-studio-ide-202.7351085-cros.deb">android-studio-ide-202.7351085-cros.deb</a>
+                                </td>
+                                <td>850116660 bytes</td>
+                                <td>6263ed1c69c358dd4708c0ee8b65144c2b7681e79f4ec2a4954144020664f5c3</td>
+                            </tr>
+                            <!-- 4.1.3 正式版 -->
+                            <tr>
                                 <td rowspan="7">4.2.0 正式版</td>
                             </tr>
                             <tr>
                                 <td>Windows IDE 安装版 (64-bit)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.24/android-studio-ide-201.7199119-windows.exe">android-studio-ide-202.7322048-windows.exe</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.24/android-studio-ide-202.7322048-windows.exe">android-studio-ide-202.7322048-windows.exe</a>
                                 </td>
                                 <td>979876072 bytes</td>
                                 <td>1c145dd9a32521f148b7646fa773e645fde011d19db06d7dda575f391f9d9844</td>
