add android studio beta 2、3、4 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,162 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Arctic Fox (2020.3.1) Beta 4-->
+                            <tr>
+                                <td rowspan="7">Arctic Fox (2020.3.1) Beta 4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.19/android-studio-2020.3.1.19-windows.exe">android-studio-2020.3.1.19-windows.exe</a>
+                                </td>
+                                <td>961225688 bytes</td>
+                                <td>0cf097d8b68a7672b0402384a47ffa1ad66126cc9b824783c0f165c5dae6838e</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1grt7y62io2j30np0c541p.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.19/android-studio-2020.3.1.19-windows.zip">android-studio-2020.3.1.19-windows.zip</a>
+                                </td>
+                                <td>971542793 bytes</td>
+                                <td>73875fe88b8ec1776290e235d1188f012c855be3e79a6c7741c367fef6d79fbc</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.19/android-studio-2020.3.1.19-mac.zip">android-studio-2020.3.1.19-mac.zip</a>
+                                </td>
+                                <td>1001428555 bytes</td>
+                                <td>1fb6a41ae10332e3f411b2e94b87a2b7db99c9f7ad56d16c6bc775b4afa5c3f3</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.19/android-studio-2020.3.1.19-mac_arm.zip">android-studio-2020.3.1.19-mac_arm.zip</a>
+                                </td>
+                                <td>955253378 bytes</td>
+                                <td>50ed51c367fbe16829e4ad20759a99a206583ef3b1318770c815d4e1a65e18bb</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.19/android-studio-2020.3.1.19-linux.tar.gz">android-studio-2020.3.1.19-linux.tar.gz</a>
+                                </td>
+                                <td>984766167 bytes</td>
+                                <td>7e5499895730303b3acc96c5b0f7f66ff33ae074dafc5673846b7b977e927f03</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.19/android-studio-2020.3.1.19-cros.deb">android-studio-2020.3.1.19-cros.deb</a>
+                                </td>
+                                <td>855556192 bytes</td>
+                                <td>26674ee2fa28a943630401e0b4f5c3684aa25d0e264184ecd192c25e706b9b99</td>
+                            </tr>
+                            <!-- Bumblebee (2021.1.1) Canary 2 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.1.1.2/android-studio-2020.1.1.2-windows.exe">android-studio-2020.1.1.2-windows.exe</a>
+                                </td>
+                                <td>910632416 bytes</td>
+                                <td>7ba9075b1817a6748fbe29549a0171b6cf66efd80c822c6b138c67f569ee7054</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1grt7qde17ej60nq0c9gop02.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.1.1.2/android-studio-2020.1.1.2-windows.zip">android-studio-2020.1.1.2-windows.zip</a>
+                                </td>
+                                <td>923232724 bytes</td>
+                                <td>8359c07129dfe0f57499ba4e9e2f23c37368cc8f117792c8dc3f6fd116f1655e</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.1.1.2/android-studio-2020.1.1.2-mac.zip">android-studio-2020.1.1.2-mac.zip</a>
+                                </td>
+                                <td>963474346 bytes</td>
+                                <td>67c5193724a5d1149d2d205ced48bda0bf5e296eb356ba392574a1e5c5dfec52</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.1.1.2/android-studio-2020.1.1.2-mac_arm.zip">android-studio-2020.1.1.2-mac_arm.zip</a>
+                                </td>
+                                <td>916854953 bytes</td>
+                                <td>b45d8a85d6054b3f6f5d657ade354f9a1e80c5a7959a284e2270ca9b19764b04</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.1.1.2/android-studio-2020.1.1.2-linux.tar.gz">android-studio-2020.1.1.2-linux.tar.gz</a>
+                                </td>
+                                <td>939268566 bytes</td>
+                                <td>b9291c3489d3ae38d2d1037dc96c4758ff034f490e867c7e81169a69ba269781</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.1.1.2/android-studio-2020.1.1.2-cros.deb">android-studio-2020.1.1.2-cros.deb</a>
+                                </td>
+                                <td>787876992 bytes</td>
+                                <td>27117c4632848443294a65505d6480d9f8ae6881f6d559300a69ba376f283c38</td>
+                            </tr>
+                            <!-- Arctic Fox (2020.3.1) Beta 3-->
+                            <tr>
+                                <td rowspan="7">Arctic Fox (2020.3.1) Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.18/android-studio-2020.3.1.18-windows.exe">android-studio-2020.3.1.18-windows.exe</a>
+                                </td>
+                                <td>961170352 bytes</td>
+                                <td>d477ed0c846c0bd3e6ff8db5932486451aaea1e0b9de1adfc8e13593728f0c90</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1grt7bgaplkj30oe0c10vy.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.18/android-studio-2020.3.1.18-windows.zip">android-studio-2020.3.1.18-windows.zip</a>
+                                </td>
+                                <td>971491604 bytes</td>
+                                <td>c7219549ded266d01e948250a40d5e1dd89d80a89157e76dee5ebac4aeab8e18</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.18/android-studio-2020.3.1.18-mac.zip">android-studio-2020.3.1.18-mac.zip</a>
+                                </td>
+                                <td>1001388955 bytes</td>
+                                <td>dd245451ab3a43de16665cd4bcea53c773b46f6c4b59cdb34a9ad551d2a52367</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.18/android-studio-2020.3.1.18-mac_arm.zip">android-studio-2020.3.1.18-mac_arm.zip</a>
+                                </td>
+                                <td>955201083 bytes</td>
+                                <td>ad66cffbf83d5f470d64f2256b866c86da9b190330779aeb053d5c61f65971df</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.18/android-studio-2020.3.1.18-linux.tar.gz">android-studio-2020.3.1.18-linux.tar.gz</a>
+                                </td>
+                                <td>984722765 bytes</td>
+                                <td>e4fe551b8cd671dc732651d8b94da660662e216e0de0674f8cd263297b100f9a</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.18/android-studio-2020.3.1.18-cros.deb">android-studio-2020.3.1.18-cros.deb</a>
+                                </td>
+                                <td>855502796 bytes</td>
+                                <td>476a5ec6de081ce6883a8d11cd746484b3a876e4391392ce4e5dfc0ea8cb18c4</td>
+                            </tr>
                             <!-- Arctic Fox (2020.3.1) Beta 2-->
                             <tr>
                                 <td rowspan="7">Arctic Fox (2020.3.1) Beta 2</td>
@@ -336,7 +492,7 @@
                                 <td>9115f049c151ac57e5c4a2e21c71c0be4d8fb3f84989aba43113087187c1ad80</td>
                             </tr>
                             <tr>
-                                <td rowspan="2">Mac OS X</td>
+                                <td>Mac (Intel)</td>
                                 <td align="left">
                                     <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.17/android-studio-2020.3.1.17-mac.zip">android-studio-2020.3.1.17-mac.zip</a>
                                 </td>
@@ -344,6 +500,7 @@
                                 <td>7342d856931eb798c1a8d6d0e8857205e6d9c1f3633d2afcea4fca3dc8544853</td>
                             </tr>
                             <tr>
+                                <td>Mac (Apple Silicon)</td>
                                 <td align="left">
                                     <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.17/android-studio-2020.3.1.17-mac_arm.zip">android-studio-2020.3.1.17-mac_arm.zip</a>
                                 </td>
@@ -431,7 +588,7 @@
                                 <td>9115f049c151ac57e5c4a2e21c71c0be4d8fb3f84989aba43113087187c1ad80</td>
                             </tr>
                             <tr>
-                                <td rowspan="2">Mac OS X</td>
+                                <td>Mac (Intel)</td>
                                 <td align="left">
                                     <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.16/android-studio-2020.3.1.16-mac.zip">android-studio-2020.3.1.16-mac.zip</a>
                                 </td>
@@ -439,6 +596,7 @@
                                 <td>7342d856931eb798c1a8d6d0e8857205e6d9c1f3633d2afcea4fca3dc8544853</td>
                             </tr>
                             <tr>
+                                <td>Mac (Apple Silicon)</td>
                                 <td align="left">
                                     <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.16/android-studio-2020.3.1.16-mac_arm.zip">android-studio-2020.3.1.16-mac_arm.zip</a>
                                 </td>
