add android studio 2021.1.1.8 and 2020.3.1 patch1 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,110 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Arctic Fox (2020.3.1) -->
+                            <tr>
+                                <td rowspan="7">Arctic Fox (2020.3.1) Patch1</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.23/android-studio-2020.3.1.23-windows.exe">android-studio-2020.3.1.23-windows.exe</a>
+                                </td>
+                                <td>957222848 bytes</td>
+                                <td>2389fbf2c3aa5b6be48da7fea793ff495eaacd40bce95552c869c4f3a044dccc</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gt4knreu6vj30oa0d3goe.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.23/android-studio-2020.3.1.23-windows.zip">android-studio-2020.3.1.23-windows.zip</a>
+                                </td>
+                                <td>967547318 bytes</td>
+                                <td>dd619dab9e7a8a3da811b817ba8d0bdd1b2b7887aa19d573aeefa62875096a13</td>
+                            </tr>
+                            </tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.23/android-studio-2020.3.1.23-mac.zip">android-studio-2020.3.1.23-mac.zip</a>
+                                </td>
+                                <td>997143063 bytes</td>
+                                <td>680c36318769e0d65b6f5e7101b244f399519b4f4dae82c553ea139a7483083d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (ARM)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.23/android-studio-2020.3.1.23-mac_arm.zip">android-studio-2020.3.1.23-mac_arm.zip</a>
+                                </td>
+                                <td>994263952 bytes</td>
+                                <td>71b0a1c8932f166e18cc003df6ab414fb5d86e8b6ffa9292f82f9a7159caf874</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.23/android-studio-2020.3.1.23-linux.tar.gz">android-studio-2020.3.1.23-linux.tar.gz</a>
+                                </td>
+                                <td>980618250 bytes</td>
+                                <td>5317a55d645098c22e79c3433f550893cbafd6ae53a527877ab1d3b2566cb21b</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.23/android-studio-2020.3.1.23-cros.deb">android-studio-2020.3.1.23-cros.deb</a>
+                                </td>
+                                <td>852045944 bytes</td>
+                                <td>86e033e2931c63a6cb721bfae1278ac5630202b75fd851dcebcbbe0205dd47de</td>
+                            </tr>
+                            <!-- Bumblebee (2021.1.1) Canary 8 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Canary 8</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.8/android-studio-2021.1.1.8-windows.exe">android-studio-2021.1.1.8-windows.exe</a>
+                                </td>
+                                <td>925728528 bytes</td>
+                                <td>60ff679a6e42585a626895a923b06d6ef143054a12b7aac5c8108fe38df28065</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gt4koa9e7uj30ns0ce0v8.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.8/android-studio-2021.1.1.8-windows.zip">android-studio-2021.1.1.8-windows.zip</a>
+                                </td>
+                                <td>938360866 bytes</td>
+                                <td>e0a259696323ca3cf08f3b4dacc956ac9fba8272f4bf3047f36e84bc1a682e5b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.8/android-studio-2021.1.1.8-mac.zip">android-studio-2021.1.1.8-mac.zip</a>
+                                </td>
+                                <td>978640647 bytes</td>
+                                <td>bd6db11418a52fd1ae3b93202a9a9a405543d971045e0c3ae0ac27a81e8ff272</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.8/android-studio-2021.1.1.8-mac_arm.zip">android-studio-2021.1.1.8-mac_arm.zip</a>
+                                </td>
+                                <td>931993341 bytes</td>
+                                <td>a5acbaf38f015dff1236fca5f13f248cf4a3c8c7c0f33f49bd290f806bdd3076</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.8/android-studio-2021.1.1.8-linux.tar.gz">android-studio-2021.1.1.8-linux.tar.gz</a>
+                                </td>
+                                <td>954162299 bytes</td>
+                                <td>94ed7e80ec420ffff3630a95d264a0029dc298fc22bb598af1c5a8493086ff02</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.8/android-studio-2021.1.1.8-cros.deb">android-studio-2021.1.1.8-cros.deb</a>
+                                </td>
+                                <td>798346156 bytes</td>
+                                <td>64e77cf988f1d6b42b5884c68563a46fa4c64c76c7c2b75f7bc1d5ae05e88a97</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Canary 7 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 7</td>
